# wurth-wsen-hids

./: Cargo.toml  README.md  flash_board.bat  memory.x
.cargo/: config.toml
src/: main.rs
