[package]
name = "stm32l4_i2c"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.7"
stm32l4xx-hal = { version = "0.7.1", features = [ "stm32l432", "rt"] }
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
