[package]
name = "wurth-wsen-hids-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bxcan = { version = "0.6.0", features = ["unstable-defmt"] }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.2"
cortex-m-rtic = "1.1.3"
defmt = "0.3.2"
defmt-rtt = "0.4.0"
embedded-hal = "0.2.7"
nb = "1.0.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
stm32l4xx-hal = { version = "0.7.1", features = [ "stm32l451", "rt"] }
heapless = "0.7.16"
bitflags = "1.3.2"
elmar-mppt = "0.1.1"
dwt-systick-monotonic = { version = "1.1.0", features = ["extend"] }

[dependencies.solar-car]
version = "0.1.1"
git = "https://gitlab.com/team-arrow-racing/arrow-3/solar-car"
# path = "../solar-car" # for local development

[[bin]]
name = "wurth-wsen-hids-rs"
bench = false